--- a/ERPWeb/Content/mystyles.css
+++ b/ERPWeb/Content/mystyles.css
@@ -45,7 +45,7 @@
 /*secondery*/
 .emndetails-btn {
     color: #1f2d3d;
-    background-color: #696969;
+    background-color: #11f434;
     border-color: #ffc107;
     box-shadow: none;
     padding: 2px 4px;
@@ -54,7 +54,7 @@
 /*green*/
 .emninvoice-btn {
     color: #1f2d3d;
-    background-color: #2E8B57;
+    background-color: #11f434;
     border-color: #ffc107;
     box-shadow: none;
     padding: 2px 4px;
@@ -62,7 +62,7 @@
 /*Blue*/
 .emnchalan-btn {
     color: #1f2d3d;
-    background-color: #1E90FF;
+    background-color: #11f434;
     border-color: #ffc107;
     box-shadow: none;
     padding: 2px 4px;
