--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -212,8 +212,8 @@
 
                                                                     <th>Raw Material</th>
                                                                     <th>Per Qty</th>
-                                                                    <th>Total Production Qty</th>
-                                                                    <th>Required Qty</th>
+                                                                    <th>Production Qty</th>
+                                                                    <th>Total Required Qty</th>
 
                                                                 </tr>
                                                             </thead>
