--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -14,30 +14,40 @@
             <ul class="nav nav-tabs nav-pills bg-navy" id="custom-tabs-two-tab" role="tablist">
 
                 <li class="nav-item">
-                    <a class="nav-link active text-white" id="custom-tabs-two-StockiestList-tab" data-toggle="pill" href="#custom-tabs-two-StockiestList" role="tab" aria-controls="custom-tabs-two-StockiestList" aria-selected="false">Stockiest</a>
+                    <a class="nav-link active text-white " id="custom-tabs-two-Zone-tab" data-toggle="pill" href="#custom-tabs-two-Zone" role="tab" aria-controls="custom-tabs-two-Zone" aria-selected="true">Zone</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-Territory-tab" data-toggle="pill" href="#custom-tabs-two-Territory" role="tab" aria-controls="custom-tabs-two-Territory" aria-selected="true">Territory</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-Area-tab" data-toggle="pill" href="#custom-tabs-two-Area" role="tab" aria-controls="custom-tabs-two-Area" aria-selected="true">Area</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-Region-tab" data-toggle="pill" href="#custom-tabs-two-Region" role="tab" aria-controls="custom-tabs-two-Region" aria-selected="true">Region</a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link text-white" id="custom-tabs-two-Division-tab" data-toggle="pill" href="#custom-tabs-two-Division" role="tab" aria-controls="custom-tabs-two-Division" aria-selected="true">Division</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link text-white " id="custom-tabs-two-Zone-tab" data-toggle="pill" href="#custom-tabs-two-Zone" role="tab" aria-controls="custom-tabs-two-Zone" aria-selected="true">Zone</a>
+                    <a class="nav-link text-white" id="custom-tabs-two-Region-tab" data-toggle="pill" href="#custom-tabs-two-Region" role="tab" aria-controls="custom-tabs-two-Region" aria-selected="true">Region</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" id="custom-tabs-two-Area-tab" data-toggle="pill" href="#custom-tabs-two-Area" role="tab" aria-controls="custom-tabs-two-Area" aria-selected="true">Area</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" id="custom-tabs-two-Territory-tab" data-toggle="pill" href="#custom-tabs-two-Territory" role="tab" aria-controls="custom-tabs-two-Territory" aria-selected="true">Territory</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" id="custom-tabs-two-StockiestList-tab" data-toggle="pill" href="#custom-tabs-two-StockiestList" role="tab" aria-controls="custom-tabs-two-StockiestList" aria-selected="false">Stockiest</a>
+                </li>
+
+
+
+
+
             </ul>
         </div>
 
         <div class="card-body shadow p-0">
             <div class="tab-content" id="custom-tabs-two-tabContent">
                 @*Stockiest List *@
-                <div class="tab-pane fade show active" id="custom-tabs-two-StockiestList" role="tabpanel" aria-labelledby="custom-tabs-two-StockiestList-tab">
+                <div class="tab-pane fade show" id="custom-tabs-two-StockiestList" role="tabpanel" aria-labelledby="custom-tabs-two-StockiestList-tab">
 
 
                     <div class="row" style="margin-top:-16px">
@@ -288,7 +298,7 @@
                 </div>
 
                 @*Zone List *@
-                <div class="tab-pane fade show " id="custom-tabs-two-Zone" role="tabpanel" aria-labelledby="custom-tabs-two-Zone-tab">
+                <div class="tab-pane fade show active" id="custom-tabs-two-Zone" role="tabpanel" aria-labelledby="custom-tabs-two-Zone-tab">
                     <div class="row" style="margin-top:-16px">
                         <div class="col-md-12">
                             <div class="card" style="background-color:#001f3f">
