--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeList.cshtml
@@ -14,7 +14,7 @@
             <th style="vertical-align:middle">#SL</th>
             <th style="vertical-align:middle" class="hide"></th>
             <th style="vertical-align:middle">Product Name</th>
-            <th style="vertical-align:middle">Product Qty</th>
+            <th style="vertical-align:middle">Product Details</th>
             <th style="vertical-align:middle">Product Unit</th>
             <th style="vertical-align:middle" class="hide"></th>
             <th style="vertical-align:middle">Action</th>
